[package]
name = "opentrustprotocol"
version = "0.1.0"
edition = "2021"
authors = ["OpenTrust Protocol Team <contact@opentrustprotocol.com>"]
description = "The official Rust SDK for the OpenTrust Protocol, the open standard for auditable trust."
license = "MIT"
repository = "https://github.com/draxork/opentrustprotocol-rs"
homepage = "https://opentrustprotocol.com"
documentation = "https://docs.rs/opentrustprotocol"
keywords = ["neutrosophy", "neutrosophic", "uncertainty", "trust", "audit", "ai", "otp", "open-trust-protocol"]
categories = ["science", "algorithms", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[lib]
name = "opentrustprotocol"
path = "src/lib.rs"

[[bench]]
name = "fusion_benchmarks"
path = "benchmarks/fusion_benchmarks.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
