[package]
name = "opentrustprotocol"
version = "0.2.0"
edition = "2021"
authors = ["OpenTrust Protocol Team <contact@opentrustprotocol.com>"]
description = "🦀 Official Rust SDK for OpenTrust Protocol - The open standard for auditable trust in AI & blockchain systems. Features neutrosophic judgments, fusion operators, and OTP mappers with memory safety."
license = "MIT"
repository = "https://github.com/draxork/opentrustprotocol-rs"
homepage = "https://opentrustprotocol.com"
documentation = "https://docs.rs/opentrustprotocol"
readme = "README.md"
keywords = [
    "neutrosophy", "trust", "uncertainty", "audit", "fusion"
]
categories = [
    "algorithms", "data-structures", "cryptography::cryptocurrencies",
    "development-tools", "web-programming"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "opentrustprotocol"
path = "src/lib.rs"

[[example]]
name = "mapper_examples"
path = "examples/mapper_examples.rs"

[[bench]]
name = "fusion_benchmarks"
path = "benchmarks/fusion_benchmarks.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
